sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path__base_4_sample_0.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: solve_steps
---
- strategy: NakedSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 8
              column: 15
            candidates:
              - 3
        actions:
          - position:
              row: 8
              column: 15
            setValue: 3
      - reasons:
          - position:
              row: 9
              column: 7
            candidates:
              - 15
        actions:
          - position:
              row: 9
              column: 7
            setValue: 15
- strategy: HiddenSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 6
            candidates:
              - 4
        actions:
          - position:
              row: 0
              column: 6
            setValue: 4
      - reasons:
          - position:
              row: 4
              column: 5
            candidates:
              - 5
        actions:
          - position:
              row: 4
              column: 5
            setValue: 5
      - reasons:
          - position:
              row: 8
              column: 2
            candidates:
              - 15
        actions:
          - position:
              row: 8
              column: 2
            setValue: 15
      - reasons:
          - position:
              row: 13
              column: 15
            candidates:
              - 14
        actions:
          - position:
              row: 13
              column: 15
            setValue: 14
      - reasons:
          - position:
              row: 14
              column: 15
            candidates:
              - 15
        actions:
          - position:
              row: 14
              column: 15
            setValue: 15
- strategy: HiddenSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 2
              column: 6
            candidates:
              - 5
        actions:
          - position:
              row: 2
              column: 6
            setValue: 5
      - reasons:
          - position:
              row: 4
              column: 13
            candidates:
              - 15
        actions:
          - position:
              row: 4
              column: 13
            setValue: 15
      - reasons:
          - position:
              row: 10
              column: 2
            candidates:
              - 5
        actions:
          - position:
              row: 10
              column: 2
            setValue: 5
      - reasons:
          - position:
              row: 15
              column: 9
            candidates:
              - 15
        actions:
          - position:
              row: 15
              column: 9
            setValue: 15
- strategy: HiddenSingles
  deductions:
    deductions:
      - reasons:
          - position:
              row: 2
              column: 5
            candidates:
              - 15
        actions:
          - position:
              row: 2
              column: 5
            setValue: 15
      - reasons:
          - position:
              row: 6
              column: 6
            candidates:
              - 15
        actions:
          - position:
              row: 6
              column: 6
            setValue: 15
- strategy: LockedSets
  deductions:
    deductions:
      - reasons: []
        actions:
          - position:
              row: 4
              column: 12
            deleteCandidates:
              - 3
              - 8
              - 9
          - position:
              row: 5
              column: 12
            deleteCandidates:
              - 3
              - 8
              - 9
              - 13
              - 16
- strategy: GroupIntersectionBoth
  deductions:
    deductions:
      - reasons:
          - position:
              row: 0
              column: 12
            candidates:
              - 13
          - position:
              row: 0
              column: 13
            candidates:
              - 13
          - position:
              row: 0
              column: 15
            candidates:
              - 13
        actions:
          - position:
              row: 3
              column: 13
            deleteCandidates:
              - 13
          - position:
              row: 3
              column: 15
            deleteCandidates:
              - 13
      - reasons:
          - position:
              row: 3
              column: 4
            candidates:
              - 13
          - position:
              row: 3
              column: 6
            candidates:
              - 13
        actions:
          - position:
              row: 3
              column: 13
            deleteCandidates:
              - 13
          - position:
              row: 3
              column: 15
            deleteCandidates:
              - 13
      - reasons:
          - position:
              row: 2
              column: 15
            candidates:
              - 11
          - position:
              row: 3
              column: 15
            candidates:
              - 11
        actions:
          - position:
              row: 3
              column: 14
            deleteCandidates:
              - 11
      - reasons:
          - position:
              row: 4
              column: 14
            candidates:
              - 11
          - position:
              row: 5
              column: 14
            candidates:
              - 11
          - position:
              row: 6
              column: 14
            candidates:
              - 11
        actions:
          - position:
              row: 3
              column: 14
            deleteCandidates:
              - 11
      - reasons:
          - position:
              row: 4
              column: 0
            candidates:
              - 2
          - position:
              row: 4
              column: 1
            candidates:
              - 2
          - position:
              row: 4
              column: 2
            candidates:
              - 2
          - position:
              row: 4
              column: 3
            candidates:
              - 2
        actions:
          - position:
              row: 7
              column: 0
            deleteCandidates:
              - 2
          - position:
              row: 7
              column: 1
            deleteCandidates:
              - 2
          - position:
              row: 7
              column: 3
            deleteCandidates:
              - 2
      - reasons:
          - position:
              row: 7
              column: 9
            candidates:
              - 2
          - position:
              row: 7
              column: 11
            candidates:
              - 2
        actions:
          - position:
              row: 7
              column: 0
            deleteCandidates:
              - 2
          - position:
              row: 7
              column: 1
            deleteCandidates:
              - 2
          - position:
              row: 7
              column: 3
            deleteCandidates:
              - 2
      - reasons:
          - position:
              row: 8
              column: 4
            candidates:
              - 4
          - position:
              row: 8
              column: 7
            candidates:
              - 4
        actions:
          - position:
              row: 10
              column: 4
            deleteCandidates:
              - 4
      - reasons:
          - position:
              row: 10
              column: 1
            candidates:
              - 4
          - position:
              row: 10
              column: 3
            candidates:
              - 4
        actions:
          - position:
              row: 10
              column: 4
            deleteCandidates:
              - 4
      - reasons:
          - position:
              row: 10
              column: 12
            candidates:
              - 13
          - position:
              row: 10
              column: 13
            candidates:
              - 13
          - position:
              row: 10
              column: 15
            candidates:
              - 13
        actions:
          - position:
              row: 11
              column: 12
            deleteCandidates:
              - 13
      - reasons:
          - position:
              row: 11
              column: 9
            candidates:
              - 13
          - position:
              row: 11
              column: 10
            candidates:
              - 13
        actions:
          - position:
              row: 11
              column: 12
            deleteCandidates:
              - 13
      - reasons:
          - position:
              row: 8
              column: 0
            candidates:
              - 11
          - position:
              row: 11
              column: 0
            candidates:
              - 11
        actions:
          - position:
              row: 13
              column: 0
            deleteCandidates:
              - 11
          - position:
              row: 14
              column: 0
            deleteCandidates:
              - 11
      - reasons:
          - position:
              row: 12
              column: 1
            candidates:
              - 11
          - position:
              row: 13
              column: 1
            candidates:
              - 11
          - position:
              row: 14
              column: 1
            candidates:
              - 11
        actions:
          - position:
              row: 13
              column: 0
            deleteCandidates:
              - 11
          - position:
              row: 14
              column: 0
            deleteCandidates:
              - 11
      - reasons:
          - position:
              row: 12
              column: 2
            candidates:
              - 13
          - position:
              row: 12
              column: 3
            candidates:
              - 13
        actions:
          - position:
              row: 14
              column: 2
            deleteCandidates:
              - 13
          - position:
              row: 14
              column: 3
            deleteCandidates:
              - 13
      - reasons:
          - position:
              row: 14
              column: 9
            candidates:
              - 13
          - position:
              row: 14
              column: 10
            candidates:
              - 13
        actions:
          - position:
              row: 14
              column: 2
            deleteCandidates:
              - 13
          - position:
              row: 14
              column: 3
            deleteCandidates:
              - 13
